// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`globSearch 1`] = `
{
  "cwd": Any<String>,
  "history": Any<Array>,
  "options": Any<Object>,
  "pattern": [
    "*/demo.ts",
  ],
  "value": [
    "test/demo.ts",
  ],
}
`;

exports[`globSearchSync 1`] = `
{
  "cwd": Any<String>,
  "history": Any<Array>,
  "options": Any<Object>,
  "pattern": [
    "*/demo.ts",
  ],
  "tapCatch": [Function],
  "value": [
    "test/demo.ts",
  ],
}
`;
